--- a/views/normaldashboard.handlebars
+++ b/views/normaldashboard.handlebars
@@ -57,7 +57,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/">Home</a>
+            <a class="nav-link" href="/normaldashboard">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/aboutus">About</a>
@@ -74,11 +74,6 @@
           <li class="nav-item">
             <a class="nav-link" href="/userchat">Chat</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/signup">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login">Sign In</a>
           </li>
           <li class="nav-item">
             <a class="btn btn-outline-light" href="/bookdemo">Book Demo</a>
@@ -107,8 +102,12 @@
   </div>
 
   <div id="estimated-price" class="content">
-    <h2>Estimated Installation Price</h2>
-    <form id="priceForm">
+    {{#if installation}}
+      <h2>You have already placed installation order</h2>
+    {{else}}
+      
+      <h2>Estimated Installation Price</h2>
+    <form id="priceForm" method="post" action="/solarSelection">
       <!-- Add the custom-checkbox class to each form-check div -->
       <div class="form-check custom-checkbox">
         <input class="form-check-input" type="checkbox" value="5000" id="solar-panel">
@@ -146,31 +145,28 @@
           Solar Panel Maintenance - $500
         </label>
       </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+
+
+
     </form>
     <p>Total cost: $<span id="total-cost">0</span></p>
+    {{/if}}
+    
   </div>
 
   <div id="contract-agreement" class="content">
-    <h2>Contract Agreement</h2>
-    <p>Please read the following contract agreement:</p>
-    <textarea readonly rows="10" cols="50">
-Solar Application Contract Agreement
+    {{#if agreement}}
+      <h2>You have already signed the agreement</h2>
+    {{else}}
+      <h2><a href="/agreement">Contract Agreement</a></h2>
+    {{/if}}
 
-1. By signing this agreement, you ("User") agree to accept the pricing for the solar installation service provided by our company ("Company").
-2. You authorize the Company to store and use the data you have provided in the Company's database for the purposes of fulfilling the solar installation service.
-3. This agreement is governed by the laws of the United States.
-
-Please read the terms carefully before signing
-    </textarea>
-    <p><input type="checkbox"> I agree to the terms and conditions</p>
   </div>
 
   <div id="installation-progress" class="content">
-    <h2>Installation Progress</h2>
-    <p>Your solar installation is 50% complete.</p>
-    <div class="progress">
-      <div class="progress-bar" role="progressbar" style="width: 50%;" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-    </div>
+    <h2 > <a href="/installationprogress"> Installation Progress </a> </h2>
   </div>
 
   <script src="/public/js/normaldashboard.js"></script>
