--- a/views/imageupload.handlebars
+++ b/views/imageupload.handlebars
@@ -105,11 +105,12 @@
     </nav>
     <h1>Image Uploader</h1>
     <!-- Image Uoloader -->
-    <form style="margin: auto; width: 50%; padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+    <form id="priceForm" method="post" action="/upload" enctype="multipart/form-data">
       <label for="image">Choose an image to upload:</label>
       <input type="file" id="image" name="image">
-      <button type="button" onclick="uploadImage()">Upload</button>
+      <button type="submit">Upload</button>
     </form>
+
      <!-- Footer -->
      <footer>
         <div class="container">
@@ -138,5 +139,6 @@
       </div>
     </footer>
     <p id="status"></p>
-    <script src="/public/js/image.js"></script>
+    <script src="/public/js/imageUploader.js"></script>
+
   </body>
