Sales user register and dashboard created

--- a/views/normaldashboard.handlebars
+++ b/views/normaldashboard.handlebars
@@ -87,7 +87,7 @@
 <body>
   <div class="sidenav">
     <a href="/normaldashboard">Welcome {{username}}!</a>
-    <a href="#" onclick="showContent('salesperson')">Salesperson</a>
+    <a href="#" onclick="showContent('salesperson')">Normal User</a>
     <a href="#" onclick="showContent('estimated-price')">Estimated Installation Price</a>
         <a href="#" onclick="showContent('contract-agreement')">Contract Agreement</a>
     <a href="#" onclick="showContent('installation-progress')">Installation Progress</a>
