--- a/public/css/main.css
+++ b/public/css/main.css
@@ -792,5 +792,35 @@ input[list] {
   border-radius: 4px;
 }
 
+.bookings-container {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	padding: 20px;
+	gap: 20px;
+  }
+  
+  .booking-card {
+	background-color: #f8f8f8;
+	border-radius: 5px;
+	padding: 20px;
+	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+	width: 300px;
+	margin-bottom: 20px;
+  }
+  
+  .booking-card h3 {
+	margin: 0;
+	margin-bottom: 10px;
+	font-size: 1.2em;
+  }
+  
+  .booking-card p {
+	margin: 0;
+	margin-bottom: 5px;
+	font-size: 1em;
+  }
+  
+
 
   
