--- a/views/customerinfo.handlebars
+++ b/views/customerinfo.handlebars
@@ -77,6 +77,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/userchat">Chat</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">logout</a>
+          </li>
           </li>
           
         </ul>
