--- a/views/imageupload.handlebars
+++ b/views/imageupload.handlebars
@@ -97,6 +97,9 @@
                 <a class="nav-link" href="/userchat">Chat</a>
               </li>
               <li class="nav-item">
+            <a class="nav-link" href="/logout">logout</a>
+          </li>
+              <li class="nav-item">
                 <a class="btn btn-outline-light" href="/bookdemo">Book Demo</a>
               </li>
             </ul>
