--- a/views/installationprogress.handlebars
+++ b/views/installationprogress.handlebars
@@ -74,6 +74,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/userchat">Chat</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/logout">logout</a>
+          </li>
           </li>
           <li class="nav-item">
             <a class="btn btn-outline-light" href="/bookdemo">Book Demo</a>
