--- a/views/success.handlebars
+++ b/views/success.handlebars
@@ -48,43 +48,7 @@
     }
   </style>
 
-  <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-    <div class="container">
-      <a class="navbar-brand" href="#">SOLARIS T6</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="/normaldashboard">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/aboutus">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/service">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/Image">Image Uploader</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/userchat">Chat</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/logout">logout</a>
-          </li>
-          </li>
-          <li class="nav-item">
-            <a class="btn btn-outline-light" href="/bookdemo">Book Demo</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+  {{{navBar}}}
 
 </head>
 <div class="pageTitle">
