Image Documentation Feature Added
Added Image Documentation feature that allows user to upload images and document them for proof of work. The images uploaded by user will stay inside user folder and the image uploaded by crew will stay in crew folder

--- a/views/normaldashboard.handlebars
+++ b/views/normaldashboard.handlebars
@@ -94,6 +94,7 @@
     <a href="#" onclick="showContent('estimated-price')">Estimated Installation Price</a>
         <a href="#" onclick="showContent('contract-agreement')">Contract Agreement</a>
     <a href="#" onclick="showContent('installation-progress')">Installation Progress</a>
+    <a href="/userImages">Photo Documentation</a>
   </div>
 
   <!-- Add your content divs here -->
