--- a/views/viewallapprovalrequests.handlebars
+++ b/views/viewallapprovalrequests.handlebars
@@ -57,7 +57,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="/salesdashboard">Home</a>
+            <a class="nav-link" href="/managementdashboard">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/aboutus">About</a>
@@ -82,25 +82,22 @@
   </nav>
 
 </head>
-<body>
-  <div class="sidenav">
-    <a href="/salesdashboard">Welcome {{username}}!</a>
-    <a href="#" onclick="showContent('salesperson')">Salesperson</a>
-    <a href="/viewallbookings" >View Booking Details</a>
-        <a href="viewallcustomers" >View Customers</a>
-    <a href="#" onclick="showContent('installation-progress')">View Manager</a>
+
+
+<div class="container">
+    {{#each approvalRequests}}
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Request ID: {{_id.$oid}}</h5>
+          <p class="card-text">User ID: {{userID}}</p>
+          <ul>
+            {{#each selectionList}}
+              <li>{{name}} - {{price}}</li>
+            {{/each}}
+          </ul>
+          <a href="/managerApproved?userID={{userID}}" class="btn btn-primary {{#if isApproved}}disabled{{/if}}">Approve</a>
+          {{#if isApproved}} <P>User is Approved</P> {{/if}}
+        </div>
+      </div>
+    {{/each}}
   </div>
-
-  <!-- Add your content divs here -->
-  {{!-- <div id="salesperson" class="content">
-    <h2>Salesperson</h2>
-    <p>Your assigned salesperson is John Doe.</p>
-    <p>Email: john.doe@example.com</p>
-    <p>Phone: (123) 456-7890</p>
-  </div> --}}
-
-
-  <script src="/public/js/salesdashboard.js"></script>
-</body>
-
-
